[package]
authors = ["cyqsimon <28627918+cyqsimon@users.noreply.github.com>"]
categories = ["asynchronous", "caching", "filesystem"]
description = "A least-frequently-used cache layered on a directory"
edition = "2021"
keywords = ["file-cache"]
license = "MIT"
name = "file-lfu"
version = "0.1.0"

[features]
default = ["uuid-as-key"]
utf8-paths = ["camino"]
uuid-as-key = ["uuid"]

[dependencies]
async-trait = "0.1.68"
camino = {version = "1.1.4", optional = true}
lfu_cache = "1.3.0"
thiserror = "1.0.40"
uuid = {version = "1.3.3", optional = true, features = ["fast-rng", "v4"]}
