[package]
authors = ["cyqsimon <28627918+cyqsimon@users.noreply.github.com>"]
categories = ["asynchronous", "caching", "filesystem"]
description = "A least-frequently-used cache layered on a directory"
edition = "2021"
keywords = ["file-cache"]
license = "MIT"
name = "file-lfu"
repository = "https://github.com/cyqsimon/file-lfu"
version = "1.0.0"

[features]
default = ["uuid-as-key"]
uuid-as-key = ["uuid"]

[dependencies]
async-trait = "0.1.68"
lfu_cache = "1.3.0"
thiserror = "1.0.40"
uuid = {version = "1.3.3", optional = true, features = ["fast-rng", "v4"]}

[dev-dependencies]
fs_extra = "1.3.0"
rand = "0.8.5"
rstest = "0.17.0"
temp-dir = "0.1.11"
tokio = {version = "1.28.1", features = ["full"]}
uuid = {version = "1.3.3", features = ["fast-rng", "v4"]}
